--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,14 @@ if(Boost_FOUND)
         ${CMAKE_SOURCE_DIR}/src/word.cpp
         ${CMAKE_SOURCE_DIR}/src/tokenizer.cpp
         ${CMAKE_SOURCE_DIR}/src/main.cpp
-        ${CMAKE_SOURCE_DIR}/src/whole.cpp)
+        ${CMAKE_SOURCE_DIR}/src/whole.cpp
+        ${CMAKE_SOURCE_DIR}/src/analysis.cpp)
     set(HEADERS
         ${CMAKE_SOURCE_DIR}/include/addon_utils.h
         ${CMAKE_SOURCE_DIR}/include/word.h
           ${CMAKE_SOURCE_DIR}/include/tokenizer.h
-        ${CMAKE_SOURCE_DIR}/include/whole.h)
+        ${CMAKE_SOURCE_DIR}/include/whole.h
+        ${CMAKE_SOURCE_DIR}/include/analysis.h)
 
     add_library(${PROJECT_NAME} SHARED ${SOURCES} ${HEADERS})
     set_target_properties(${PROJECT_NAME} PROPERTIES
