added Analysis class using AsyncWorker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ if(Boost_FOUND)
         ${CMAKE_SOURCE_DIR}/include/word.h
           ${CMAKE_SOURCE_DIR}/include/tokenizer.h
         ${CMAKE_SOURCE_DIR}/include/whole.h
-        ${CMAKE_SOURCE_DIR}/include/analysis.h)
+        ${CMAKE_SOURCE_DIR}/include/analysis.h
+      )
 
     add_library(${PROJECT_NAME} SHARED ${SOURCES} ${HEADERS})
     set_target_properties(${PROJECT_NAME} PROPERTIES
