--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ if(Boost_FOUND)
     set(SOURCES
         ${CMAKE_SOURCE_DIR}/src/addon_utils.cpp
         ${CMAKE_SOURCE_DIR}/src/word.cpp
+        ${CMAKE_SOURCE_DIR}/src/sentence.cpp
         ${CMAKE_SOURCE_DIR}/src/tokenizer.cpp
         ${CMAKE_SOURCE_DIR}/src/main.cpp
         ${CMAKE_SOURCE_DIR}/src/analysis.cpp
@@ -29,6 +30,7 @@ if(Boost_FOUND)
         ${CMAKE_SOURCE_DIR}/include/addon_utils.h
         ${CMAKE_SOURCE_DIR}/include/addon_errors.h
         ${CMAKE_SOURCE_DIR}/include/word.h
+        ${CMAKE_SOURCE_DIR}/include/sentence.h
         ${CMAKE_SOURCE_DIR}/include/tokenizer.h
         ${CMAKE_SOURCE_DIR}/include/analysis.h
         ${CMAKE_SOURCE_DIR}/include/splitter.h
