--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "freeling",
   "version": "1.0.0",
   "description": "Node.js addon for FreeLing library",
+  "repository": "github:Pauline-sh/freeling-nodejs-addon",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cmake-js": "^4.0.1",
+    "create-react-app": "^2.1.8",
     "node-addon-api": "^1.6.2"
   }
 }
