--- a/freeling-demo/package.json
+++ b/freeling-demo/package.json
@@ -21,5 +21,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-html-id": "^0.1.5"
+  }
 }
