--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "express-validator": "^5.3.1"
   },
   "dependencies": {
+    "cmake-js": "^5.2.0",
+    "node-addon-api": "^1.6.3",
     "nodemon": "^1.18.10"
   }
 }
