updated info about dependencies

--- a/addon/package.json
+++ b/addon/package.json
@@ -14,11 +14,11 @@
     "node-addon-api": "^1.6.2"
   },
   "devDependencies": {
-    "cmake-js": "^4.0.1",
-    "node-addon-api": "^1.6.2",
     "bluebird": "~3.5.3",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
-    "mocha": "~6.1.1"
+    "cmake-js": "^4.0.1",
+    "mocha": "^6.1.4",
+    "node-addon-api": "^1.6.2"
   }
 }
