--- a/addon/package.json
+++ b/addon/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cmake-js": "^4.0.1",
-    "node-addon-api": "^1.6.2"
+    "js-meter": "^1.1.4",
+    "node-addon-api": "^1.6.2",
+    "node-gyp": "^4.0.0",
+    "rebuild": "^0.1.2"
   },
   "devDependencies": {
     "bluebird": "~3.5.3",
